[tool]
[tool.poetry]
name = "nsot"
version = "2.0.0"
description = "Network Source of Truth (IP Address Management)."
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python", "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
homepage = "https://github.com/dropbox/nsot"
authors = [
    "Jathan McCollum <jathan@gmail.com>",
    "Gary M. Josack <gary@dropbox.com>"
]
include = [
    "README.md",
    "setup.cfg",
    "tests/**/*",
    "nsot/templates/**/*",
    "nsot/static/build/**/*",
]
exclude = [
    "tests/**/*.pyc",
]

[tool.poetry.scripts]
nsot-server = "nsot.util:main"
snot-server = "nsot.util:main"

[tool.poetry.dependencies]
python = ">=3.10"
cryptography = ">=3.4"
dj-static = "==0.0.*,>=0.0.6"
django = "~=5.2.0"
django-extensions = "~=4.1"
django-filter = "~=24.3"
django-guardian = "~=3.2.0"
django-macaddress = "~=1.9.0"
djangorestframework = "~=3.16.0"
drf-extensions = "~=0.8.0"
drf-nested-routers = "~=0.95.0"
gunicorn = "^20.0.4"
ipython = ">=8.0"
itypes = "==1.1.*,>=1.1.0"
jinja2 = ">=3.0"
logan = "~=0.7.2"
markupsafe = ">=2.0"
netaddr = "==0.7.*,>=0.7.18"
requests = ">=2.28.0"
static3 = "==0.6.*,>=0.6.1"
coreapi = "^2.3.3"
inflection = ">=0.5.1"
packaging = ">=21.0"
urllib3 = ">=2.0"

[tool.poetry.dev-dependencies]
pytest = ">=7.0"
pytest-django = ">=4.5"
PyYAML = ">=6.0"
Sphinx = ">=5.0"
sphinx-autobuild = ">=2021.0"
sphinx-rtd-theme = ">=1.0"
ipdb = ">=0.13"
flake8 = ">=5.0"
attrs = ">=22.0"
mrproxy = "~=0.4.0"
black = ">=22.0"

[tool.black]
line-length = 79
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | nsot/migrations
  )/
)
'''
