[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nsot"
version = "2.0.5"
description = "Network Source of Truth (IP Address Management)."
readme = "README.md"
license = "Apache-2.0"
authors = [
    {name = "Jathan McCollum", email = "jathan@gmail.com"},
    {name = "Gary M. Josack", email = "gary@dropbox.com"},
]
requires-python = ">=3.10,<3.13"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
]
dependencies = [
    "coreapi>=2.3.3",
    "cryptography>=3.4",
    "dj-static>=0.0.6",
    "django~=5.2.0",
    "django-extensions~=4.1",
    "django-filter~=24.3",
    "django-guardian~=3.2.0",
    "django-macaddress~=1.9.0",
    "djangorestframework~=3.16.0",
    "drf-extensions~=0.8.0",
    "drf-nested-routers~=0.95.0",
    "gunicorn>=20.0.4",
    "inflection>=0.5.1",
    "ipython>=8.0",
    "itypes>=1.1.0",
    "jinja2>=3.0",
    "logan~=0.7.2",
    "markupsafe>=2.0",
    "netaddr>=0.7.18,<0.8",
    "packaging>=21.0",
    "requests>=2.28.0",
    "static3>=0.6.1",
    "urllib3>=2.0",
]

[project.optional-dependencies]
dev = [
    "attrs>=22.0",
    "ipdb>=0.13",
    "mrproxy~=0.4.0",
    "pytest>=7.0",
    "pytest-django>=4.5",
    "python-semantic-release>=9.0.0",
    "PyYAML>=6.0",
    "ruff>=0.1.0",
]
docs = [
    "sphinx>=5.0",
    "sphinx-autobuild>=2021.0",
    "sphinx-rtd-theme>=1.0",
]

[project.scripts]
nsot-server = "nsot.util:main"
snot-server = "nsot.util:main"

[project.urls]
Homepage = "https://github.com/jathanism/nsot"
Repository = "https://github.com/jathanism/nsot"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["nsot*"]

[tool.setuptools.package-data]
nsot = [
    "templates/**/*",
    "static/**/*",
    "vendor/**/*",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.test_settings"
django_find_project = false
pythonpath = ["."]
addopts = "-vv"
testpaths = ["tests"]

[tool.ruff]
line-length = 79
target-version = "py310"
exclude = [
    "nsot/vendor",
    "nsot/migrations",
    ".venv",
    "build",
    "dist",
    "node_modules",
    "docs",
]

[tool.ruff.lint]
select = [
    "B",      # flake8-bugbear - bug prevention
    "COM",    # flake8-commas - trailing comma consistency
    "E",      # pycodestyle errors
    "EM",     # flake8-errmsg - exception message hygiene
    "F",      # pyflakes
    "I",      # isort - import sorting
    "PIE",    # flake8-pie - unnecessary constructs
    "PT",     # flake8-pytest-style
    "RET",    # flake8-return
    "RSE",    # flake8-raise
    "RUF",    # ruff-specific rules
    "S",      # flake8-bandit - security
    "SIM",    # flake8-simplify
    "UP",     # pyupgrade - Python 3 modernization
    "W",      # pycodestyle warnings
]
ignore = [
    # --- Formatter conflicts ---
    "COM812",   # trailing-comma-missing (handled by ruff formatter)
    # --- Kept from baseline ---
    "E501",     # line-too-long (handled by formatter)
    # --- Deferred for future cleanup ---
    "B026",     # star-arg unpacking after keyword argument
    "B904",     # raise-without-from-inside-except
    "EM101",    # raw-string-in-exception
    "EM103",    # dot-format-in-exception
    "F841",     # local-variable-is-assigned-but-never-used
    "PT012",    # pytest-raises-with-multiple-statements
    "RET504",   # unnecessary-assign
    "RUF012",   # mutable-class-default (Django model Meta)
    "UP031",    # printf-string-formatting
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG",   # unused arguments (test fixtures)
    "D",     # docstrings not enforced in tests
    "E402",  # module-level imports not at top
    "E722",  # bare-except
    "E731",  # lambda assignments
    "F821",  # undefined names (test fixtures)
    "PT009", # pytest-unittest-assertion
    "PT027", # pytest-unittest-raises-assertion
    "S",     # security checks not relevant in tests
]
"nsot/conf/settings.py" = [
    "S105",  # possible hardcoded password (SECRET_KEY)
]
"tests/test_settings.py" = [
    "F403",  # star imports (Django settings pattern)
    "F405",  # may be undefined from star imports
]
"nsot/management/**/*.py" = [
    "S605",  # start-process-with-a-shell
    "S607",  # start-process-with-partial-path
]
"docs/conf.py" = [
    "D",     # docstrings not enforced
    "E402",  # module-level imports not at top
    "F401",  # unused imports (used by Sphinx)
]

[tool.ruff.lint.isort]
known-first-party = ["nsot"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install uv && uv build"
major_on_zero = false
tag_format = "v{version}"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "refactor", "docs", "chore", "ci", "test", "build"]
major_tags = ["BREAKING CHANGE"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false
